--- a/FrontEnd/Staff/package.json
+++ b/FrontEnd/Staff/package.json
@@ -56,6 +56,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
+    "tailwindcss-animated": "^2.0.0",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
