--- a/FrontEnd/Customer/package.json
+++ b/FrontEnd/Customer/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.18.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.510.0",
