--- a/Backend/package.json
+++ b/Backend/package.json
@@ -37,6 +37,7 @@
     "cookie-parser": "^1.4.7",
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
+    "node-xlsx": "^0.24.0",
     "nodemailer": "^7.0.3",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
