--- a/Backend/package.json
+++ b/Backend/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.2",
     "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
+    "exceljs": "^4.4.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
     "node-xlsx": "^0.24.0",
