--- a/FrontEnd/Customer/package.json
+++ b/FrontEnd/Customer/package.json
@@ -42,6 +42,7 @@
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.0",
