--- a/FrontEnd/Customer/package.json
+++ b/FrontEnd/Customer/package.json
@@ -38,6 +38,7 @@
     "framer-motion": "^12.18.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.510.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
