--- a/FrontEnd/Staff/package.json
+++ b/FrontEnd/Staff/package.json
@@ -46,6 +46,7 @@
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
+    "react-currency-input-field": "^3.10.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
