--- a/Chatbot/requirements.txt
+++ b/Chatbot/requirements.txt
@@ -53,6 +53,7 @@ humanfriendly==10.0
 idna==3.10
 jax==0.4.30
 jaxlib==0.4.30
+Jinja2==3.1.6
 jmespath==1.0.1
 joblib==1.5.1
 jsonpickle==3.0.4
@@ -66,9 +67,11 @@ MarkupSafe==3.0.2
 matplotlib==3.5.3
 mattermostwrapper==2.2
 ml_dtypes==0.5.3
+mpmath==1.3.0
 msgpack==1.1.1
 multidict==5.2.0
 networkx==2.6.3
+nltk==3.9.1
 numpy==1.23.5
 oauthlib==3.3.1
 opt_einsum==3.4.0
@@ -121,6 +124,7 @@ sanic-jwt==1.8.0
 sanic-routing==0.7.2
 scikit-learn==1.1.3
 scipy==1.10.1
+sentence-transformers==5.0.0
 sentry-sdk==1.14.0
 simple-websocket==1.1.0
 six==1.17.0
@@ -130,6 +134,7 @@ slack_sdk==3.36.0
 SQLAlchemy==1.4.54
 structlog==23.3.0
 structlog-sentry==2.1.0
+sympy==1.14.0
 tabulate==0.9.0
 tarsafe==0.0.4
 tensorboard==2.12.3
@@ -142,14 +147,19 @@ tensorflow-io-gcs-filesystem==0.31.0
 termcolor==3.1.0
 terminaltables==3.1.10
 threadpoolctl==3.6.0
+tokenizers==0.21.4
 toolz==1.0.0
+torch==2.7.1
 tqdm==4.67.1
+transformers==4.54.1
 twilio==8.2.2
 typing-utils==0.1.0
 typing_extensions==4.14.1
 tzdata==2025.2
 tzlocal==5.3.1
 ujson==5.10.0
+underthesea==6.8.4
+underthesea_core==1.0.4
 urllib3==2.5.0
 wcwidth==0.2.13
 webexteamssdk==1.6.1
