--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -35,12 +36,15 @@
     "class-validator": "^0.14.2",
     "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
+    "crypto-js": "^4.2.0",
     "exceljs": "^4.4.0",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
     "node-xlsx": "^0.24.0",
     "nodemailer": "^7.0.3",
     "passport-jwt": "^4.0.1",
+    "qs": "^6.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "streamifier": "^0.1.1"
