Refactoring: Add feature provide

--- a/Chatbot/rasa-chatbot/data/rules.yml
+++ b/Chatbot/rasa-chatbot/data/rules.yml
@@ -26,8 +26,10 @@ rules:
   steps:
     - intent: nlu_fallback
     - action: utter_fallback
+    - action: action_provide_feature
 
 - rule: Xử lý ngoài phạm vi
   steps:
     - intent: out_of_scope
     - action: utter_fallback
+    - action: action_provide_feature
